--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 </head>
 <body>
     <header>
+        <h1 class="scores">View the Scoreboard</h1>
+        <h1 class="timer">Time Remaining: <span id="time">0</span></h1>
     </header>
-    <main>
+    <main class="main">
+        <h1>Coding Quiz</h1>
+        <p>
+          Let's see what you know about coding! Take this timed quiz. You'll have 100 seconds to answer five questions. Work quickly but not too quickly - wrong answers will take 10 seconds away from your time!
+        </p>
+        <button id="start">Start Quiz</button>
     </main>
     <footer>
     </footer>
