--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h3 id="question"></h3>
         <div id="choices"></div>
     </main>
-    <script src=".script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
